<resources>
    <string name="app_name">電子巡檢 </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">上傳檔案</string>
    <string name="menu_settings">Settings</string>
    <string name="title_main_activity">SimpleImageTextList</string>
    <string name="image">Image thumbnail</string>
    <string name="ht_user">帳號 (mitsui)</string>
    <string name="ht_pw">密碼 (123)</string>
    <string name="login">登入</string>
    <string name="pick">選擇日期</string>
    <string name="user">宗佑</string>
    <string name="pw">123</string>
    <string name="cam">拍照</string>
    <string name="score">分數</string>
    <string name="form">表單</string>
    <string name="item">項目</string>
    <string name="date">yyyy-mm-dd</string>
    <string name="button_text7">修改備註</string>
    <string name="pass">合格 不合格</string>
    <string name="load">待改善項目</string>
    <string name="local">檢視上傳</string>

    <string-array name="store">
        <item>選擇門市</item>
        <item>農安</item>
        <item>農安選品</item>
        <item>上允</item>
        <item>明水</item>
        <item>明水選品</item>
        <item>信義</item>
    </string-array>
    <string-array name="section">
        <item>　　</item>
        <item>品壽司區</item>
        <item>壽司吧台</item>
        <item>沙拉水果吧</item>
        <item>煮物</item>
        <item>炸物</item>
        <item>烤物</item>
        <item>水砧區</item>
        <item>後場／公共區域</item>
        <item>表單確認</item>
    </string-array>
    <string-array name="date">
        <item>2015/11/04</item>
        <item>2015/10/31</item>
        <item>2015/10/25</item>
        <item>2015/10/24</item>
        <item>2015/10/21</item>
    </string-array>
    <string-array name="score">
        <item>選擇分數</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_a">A</string>
    <string name="title_activity_b">B</string>
    <string name="title_activity_c">C</string>

    <string name="input_code">請輸入：</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="code">代號：</string>
    <string name="image_url">https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSNq1jyaU4T8N74W7Gv2sqKDmDXBwS-AI2l99bUu4KZumzkuEe_</string>
    <string name="lucky_num">button</string>
    <string name="lucky_init_text">text</string>


</resources>
